Revision history for Email-Send

2.201     2015-03-05
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          add x_deprecated metadata

2.200     2015-02-25
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          when trying to pick the first available mailer, never pick Test

2.199     2013-08-18
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          stop warning from Return::Value; if it didn't switch you to
          Email::Sender by now, it isn't gonna

          cope with irritating differences between Net::SMTP and Net::SMTP::TLS
          (thanks, Yanick Champoux!)

2.198     2009-07-12
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **
          fix the paths added in 2.195; thanks, ansgar from uni-heidelberg

2.197     2009-06-13
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          fix regression introduced into SMTP transport's "to" detector
          (thanks to John Maslanik for bug report)

2.196     2009-06-09
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          reduce reliance of tests on screw-up-able Module::Pluggable call

2.195     2009-06-07
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          add /usr/sbin/sendmail as last place to always look for sendmail
          add /usr/lib/sendmail as last place to always look for sendmail
          if $QMAIL variable for Qmail subclass is -x, use it

2.194     2009-01-02
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          attempt to fix "smtp client never sends QUIT"

2.193     2008-12-19
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          long-overdue application of patch from RUZ to correct error from
          Sendmail mailer (thanks, RUZ!)

2.192     2007-11-01
          horrible hack to fix regrettable decision in use of Module::Pluggable
            (see https://rt.cpan.org/Ticket/Display.html?id=30183)

2.191     2007-10-21